--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
     "sass": "^1.53.0",
     "typescript": "^4.7.4",
