--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mens-test-app",
   "version": "0.1.0",
+  "homepage": "https://testroom.com.ua",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
