--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
+    "i18next": "^21.9.1",
+    "i18next-browser-languagedetector": "^6.1.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-i18next": "^11.18.4",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
