--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "homepage": "https://testroom.com.ua",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.1",
+    "@mui/styled-engine-sc": "^5.10.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -24,6 +28,7 @@
     "react-toastify": "^9.0.7",
     "redux": "^4.2.0",
     "sass": "^1.53.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
