--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "firebase": "^9.9.0",
+    "html-react-parser": "^3.0.4",
     "react-router-dom": "^6.3.0",
     "redux-thunk": "^2.4.1"
   }
