--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mens-test-app",
   "version": "0.1.0",
-  "homepage": "https://testroom.com.ua",
+  "homepage": "https://testroom.pl",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
